crates/core/src/snapshots/everruns_core__events__contract_tests__event_data_act_completed.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "completed": true,
  "success_count": 2,
  "error_count": 0,
  "duration_ms": 500
}
