crates/core/src/snapshots/everruns_core__events__contract_tests__event_data_output_message_completed.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "message": {
    "id": "[MESSAGE_ID]",
    "role": "agent",
    "content": [
      {
        "type": "text",
        "text": "Hello!"
      }
    ],
    "created_at": "[TIMESTAMP]"
  }
}
