crates/core/src/snapshots/everruns_core__events__contract_tests__event_data_reason_thinking_delta.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "delta": "Let me think...",
  "accumulated": "Let me think..."
}
