crates/core/src/snapshots/everruns_core__events__contract_tests__event_data_session_idled.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "iterations": 3,
  "usage": {
    "input_tokens": 500,
    "output_tokens": 200
  }
}
