crates/core/src/snapshots/everruns_core__events__contract_tests__event_data_session_started.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "agent_id": "agent_00000000000000000000000000000004"
}
