crates/core/src/snapshots/everruns_core__events__contract_tests__event_data_session_title_updated.snap
---
source: crates/core/src/events.rs
assertion_line: 4410
expression: data
---
{
  "previous_title": "Old title",
  "title": "Automatic Session Titles"
}
